--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Keep me Logged In",
     "description": "Keeps me looged into LMI",
-    "version": 1.0,
+    "version": "1.0",
     "manifest_version": 2,
     "browser_action": {
         "default_popup": "hello.html",
