added urls to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,14 @@
         "default_popup": "hello.html",
         "default_icon": "hello_extensions.png"
     },
+    "content_scripts": [
+        {
+            "matches": [
+                "https://austinwiley.github.io/Austin-Portfolio/", "https://secure.logmein.com/central.aspx"
+            ],
+            "js": ["app.js"]
+        }
+    ],
     "commands": {
         "_execute_browser_action": {
             "suggested_key": {
